--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <input type="text" id="searchBar" placeholder="Sehir giriniz..">
         </div>
         <div class="content">
-            <div class="city">Istanbul,TR</div>
-            <div class="temp">15°C</div>
-            <div class="desc">Gunesli</div>
-            <div class="minmax">14°C / 19°C</div>
+            <div class="city">-,-</div>
+            <div class="temp">-°C</div>
+            <div class="desc">-</div>
+            <div class="minmax">-°C / -°C</div>
         </div>
     </div>
     
